--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,13 +1,17 @@
 - title: Про нас
   ref: about
   styles: tools__item_pink
-  description: Мы организация русскоговорящих геев, лесбиянок, бисексуалов, трансгендеров и их друзей в Германии.</p><p>Мы встречаемся каждую первую пятницу месяца в 19.00 по адресу Berlin, Kleiststr. 35 (LSVD)
-  docs:
+  description: <p>Мы организация русскоговорящих геев, лесбиянок, бисексуалов, трансгендеров и их друзей в Германии.</p><br/><p>Мы встречаемся каждую первую пятницу месяца в 19.00 по адресу Berlin, Kleiststr. 35 (LSVD)</p>
+  top:
   - title: Команда
     permalink: team
   - title: Наша миссия
+    permalink: mission
   - title: Пресса о нас
+    permalink: press
   - title: Отчеты
+    permalink: reports
+  bottom:
   - title: Наши встречи
   - title: Присоединиться к нам
   - title: Помочь нам
@@ -17,11 +21,12 @@
   ref: learn
   styles: tools__item_green
   description: В нашей Квартире есть комната, в которой люди учатся.<br/>Учатся бороться с невежеством. К сожалению, даже в Германии многие люди не представляют, что это такое. Эта странная аббревиатура ЛГБТИК.<br/>Каждый день наша команда старается преодолеть это барьер и донести людям знание.<br/>Материалы, которые помогут всем, кто ощущает свою непохожесть. Кому-то они помогут разобраться, кому-то помогут открыться. А для некоторых это станет настоящим откровением.
-  docs:
+  top:
   - title: Наши материалы
   - title: Статьи
   - title: Законы
   - title: Группа просвещения
+  bottom:
   - title: История вопроса
   - title: Гомофобия, как быть?
   - title: Современные теории
@@ -31,10 +36,11 @@
   ref: action
   styles: tools__item_red
   description: У нас большая творческая команда. Очень часто мы участвуем в различных акциях в поддержку ЛГБТИК.<br/>Что мы уже успели сделали и что собираемся сделать в будущем
-  docs:
+  top:
   - title: Радужный флешмоб
   - title: CSD
   - title: Наш фильм
+  bottom:
   - title: Quarteera на Прайде 2013 в Берлине
   - title: Берлин против гомофобии в России
   - title: Qвартира и Питер просвещают молодежь в Германии!
@@ -44,10 +50,11 @@
   ref: migration
   styles: tools__item_blue
   description: Организация русскоязычных ЛГБТ в Германии Quarteera совместно с ЛГБТ-беженцами и юристами занимается помощью по вопросам о политическом убежище в Германии.<br/>Самые частые вопросы к нам
-  docs:
+  top:
   - title: Материалы про миграцию
   - title: Статьи
   - title: Группа "Asyl"
+  bottom:
   - title: Политическое убежище как лучшее решение?
   - title: Могут ли меня признать беженцем?
   - title: Есть ли у меня шансы?
